kustomize/overlays/cockroachdb/client-secure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cockroachdb-client-secure
  namespace: cockroachdb
  labels:
    app.kubernetes.io/name: cockroachdb
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/component: db-console
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cockroachdb
      app.kubernetes.io/instance: cockroachdb
      app.kubernetes.io/component: db-console
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cockroachdb
        app.kubernetes.io/instance: cockroachdb
        app.kubernetes.io/component: db-console
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: cockroachdb-client-secure
          image: cockroachdb/cockroach:v22.2.2
          imagePullPolicy: IfNotPresent
          command:
            - sleep
            - "2147483648" # 2^31
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      #     volumeMounts:
      #       - name: client-certs
      #         mountPath: /cockroach/cockroach-certs/
      # volumes:
      #   - name: client-certs
      #     projected:
      #         sources:
      #           - secret:
      #               name: cockroachdb-node
      #               items:
      #                 - key: ca.crt
      #                   path: ca.crt
      #           - secret:
      #               name: cockroachdb-root
      #               items:
      #                 - key: tls.crt
      #                   path: client.root.crt
      #                 - key: tls.key
      #                   path: client.root.key
      #         defaultMode: 256
